# rustsbi-k510

./: .gitignore  Cargo.toml  README.md  requirement.md
.cargo/: config.toml
rustsbi-k510/: Cargo.toml  build.rs
rustsbi-k510/src/: clint.rs  cpu.rs  device_tree.rs  execute.rs  k510_hsm.rs  linker64.ld  main.rs  ns16550a.rs  plic_sw.rs  plmt.rs  reset.rs  uart.rs
rustsbi-k510/src/peripherals/: mod.rs  ws2812.rs
rustsbi-k510/src/peripherals/sysctl_clk/: boot.rs  clk.rs  constants.rs  driver.rs  mod.rs
sdcard-image-generation/: genimage-sdcard.cfg  k510_crb_lp3_v1_2.dtb  k510_crb_lp3_v1_2.dts  k510_crb_lp3_v1_2.h  k510_crb_lp3_v1_2_defconfig  k510_emmc_defconfig  k510_nand_defconfig  k510_sdcard_defconfig
test-kernel/: Cargo.toml  genimage-sdcard.cfg
test-kernel/src/: main.rs
xtask/src/: main.rs
