[package]
name = "rustsbi-k510"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = "0.3.0-alpha.4"
riscv = "0.9.0"
spin = "0.9"
r0 = "1"
uart_16550 = "0.2"
dtb-walker = "=0.2.0-alpha.3"
k510-pac = "0.0.2"